@@ -5,6 +5,7 @@
 package beats
 
 import (
+	"fmt"
 	"net/url"
 	"os"
 	"path/filepath"
@@ -109,7 +110,10 @@ func (b *Monitor) EnrichArgs(process, pipelineID string, args []string, isSideca
 		if isSidecar {
 			logFile += "_monitor"
 		}
+		logFile = fmt.Sprintf("%s-json.log", logFile)
 		appendix = append(appendix,
+			"-E", "logging.json=true",
+			"-E", "logging.ecs=true",
 			"-E", "logging.files.path="+loggingPath,
 			"-E", "logging.files.name="+logFile,
 			"-E", "logging.files.keepfiles=7",
